@@ -1,5 +1,12 @@
 9/18/05 (frmky)
   * Update blanczos-no-mmx.c to include multiplication tests and timing.
+  
+9/18/05 (trilliwig)
+  * Changed char* variable basename to base_name (conflicts with the
+    basename() library function).
+  * Added Makefile rule for *.S files and changed *.s rule to use $(CC)
+    (so I can easily add -m32 to CFLAGS when needed and have it work).
+  * Added prescott target and cleaned up a few warnings.
 
 9/16/05 (trilliwig)
   * Fixed type mismatch with rho_factor() causing procrels crashes on 64-bit
